# jens

./: Cargo.toml  README.md  jens.code-workspace
examples/basic/: emoji.jens  emoji.js  main.rs
examples/json_validator/: main.rs  template.jens
jens/: Cargo.toml
jens/examples/basic/: emoji.jens
jens/examples/json_validator/: main.rs
jens/src/: block.rs  file.rs  lib.rs  parser.rs
jens/src/parser/: grammar.pest  segment.rs  template.rs
jens/src/parser/snapshots/: tests__template.indented_content.snap  tests__template.mixed_indentation.snap  tests__template.tab_indented.snap
jens/src/snapshots/: tests__block.outputs_a_block_with_correct_indentation.snap  tests__block.replaces_a_placeholder.snap  tests__parser.parses_a_template.snap
jens_derive/: Cargo.toml
jens_derive/src/: lib.rs
src/: block.rs  file.rs  grammar.pest  grammar.rs  lib.rs  parser.rs
src/parser/: grammar.pest  segment.rs  template.rs  template_line.rs
src/parser/snapshots/: tests__template.empty_template.snap  tests__template.ignore_inner_template.snap  tests__template.ignore_more_indentation.snap  tests__template.one_liner.snap
src/test_snapshots/: block.outputs_a_block_with_correct_indentation.txt
test_suite/: Cargo.toml
test_suite/src/: lib.rs  test.jens
test_suite/src/json_validator/: generator.rs  mod.rs  template.jens
test_suite/src/json_validator/snapshots/: tests__test_derive_json_validator.snap
test_suite/src/snapshots/: tests__test_derive_simple.snap
