[package]
name = "jens"
description = "Readable templates for code generation"
license = "MIT/Apache-2.0"
version = "0.4.1"
authors = [
    "Jordan West <jordwest@gmail.com>",
    "Josh Leeb-du Toit <josh.leebdutoit@gmail.com>"
]
repository = "https://github.com/jordwest/jens"

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.8"
