[package]
name = "jens"
version = "0.4.2"
authors = [
    "Jordan West <jordwest@gmail.com>",
    "Josh Leeb-du Toit <mail@joshleeb.com>",
]

description = "Readable templates for code generation"
documentation = "https://docs.rs/crate/jens/"
keywords = ["codegen", "template"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jordwest/jens"

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.8"
