[package]
name = "jens"
version = "0.4.2"
edition = "2018"
authors = [
    "Jordan West <jordwest@gmail.com>",
    "Josh Leeb-du Toit <mail@joshleeb.com>",
]

description = "Readable templates for code generation"
documentation = "https://docs.rs/crate/jens/"
keywords = ["codegen", "template"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jordwest/jens"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
