[package]
name = "jens_derive"
version = "0.6.0"
authors = ["Jordan West <jordwest@gmail.com>"]
edition = "2018"

description = "Convenience macros for code generation with jens"
license = "MIT/Apache-2.0"

[lib]
name = "jens_derive"
proc-macro = true

[dependencies]
syn = "0.15.26"
quote = "0.6.11"
jens = { version = "0.6.0", path = "../jens" }

[dev-dependencies]
